--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/form-control": "^2.0.9",
+    "@chakra-ui/icons": "^2.0.9",
+    "@chakra-ui/react": "^2.3.2",
+    "@chakra-ui/tabs": "^2.1.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@fontsource/open-sans": "^4.5.11",
+    "@fontsource/poppins": "^4.5.9",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.4",
     "firebase": "^9.9.4",
-    "next": "12.2.4",
+    "framer-motion": "^6.5.1",
+    "next": "^12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-phone-number-input": "^3.2.11"
   },
   "devDependencies": {
     "@types/node": "18.7.1",
