optimization fix in progress

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/poppins": "^4.5.9",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
+    "@next/bundle-analyzer": "^12.3.0",
     "firebase": "^9.9.4",
     "framer-motion": "^6.5.1",
     "next": "^12.3.0",
