--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "react-phone-number-input": "^3.2.11"
   },
   "devDependencies": {
