--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.10.4",
     "@fontsource/open-sans": "^4.5.11",
     "@fontsource/poppins": "^4.5.9",
+    "@formspark/use-formspark": "^0.1.39",
     "@formspree/react": "^2.4.0",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
