--- a/src/.env
+++ b/src/.env
@@ -9,3 +9,8 @@ GOOGLE_SECRET = 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
 NEXTAUTH_URL=http://localhost:3000
 
 JWT_SECRET=99f3022bae5cce5f74eb8e1b5bdc25c8
+
+AWS_S3_ARN=arn:aws:iam::408426032839:user/NextAccess
+AWS_S3_ID=AKIAV6GAWV3DUXU27C7U
+AWS_S3_SECRET=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
+
