--- a/src/package.json
+++ b/src/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
     "@next/bundle-analyzer": "^12.3.0",
+    "clsx": "^1.2.1",
     "firebase": "^9.9.4",
     "firecrud-react": "^1.0.1",
     "framer-motion": "^6.5.1",
